Fixes #365 - Edit UX for results map
In this branch, @millerEric made some UX changes to the results map
view in response to Issue #365 ("Google Map rollover is cropped out of
view some times."). @millerEric used infoBox.js from the Google
Maps utility library, because it allows for easy customizability,
including position and styling. Presently, the infoBox is displayed to
the right of markers to decrease the likelihood of it being cropped out
of the window. The infoBox can be styled either within its options
object, or by linking to a CSS stylesheet.

(1) @millerEric set the marker's optimized property to false in order to
prevent events from propagating through the infoBox onto the map (e.g.
to prevent markers underneath an open infoBox from registering a
mouseover event).

(2) @anselmbradford added a z-index for the close box [x] per
@millerEric original edit, because it was visible but not clickable.

(3) infoBox.js requires the google maps api to be fully loaded before
it is loaded. This has presented some difficulties because of the
asynchronous loading of the google maps api. @anselmbradford nested the
dependencies so they loaded in order, which consequentially required
the result-map-manager to become self-executing, for better or worse.

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -1794,6 +1794,13 @@ body { top: 0px !important; }
 {
   height: 150px;
   border-bottom: 1px solid midtone($blue);
+  .infoBox
+  {
+    img
+    {
+      z-index:9000;
+    }
+  }
 }
 #map-canvas.max
 {
